--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 
 title: My Resume
 url: 'http://junlulocky.com'
-baseurl: '/PanelCV' #change it according to your repository name
+baseurl: '3eunjeong.github.io' #change it according to your repository name
 
 
 
 # Profile information
-yourname: Brown Smith  ## put your name
-title: 'GRAPHIC &amp; WEB DESIGNER'  ## your title
-location: San Francisco , CA
+yourname: Lee EunJeong
+title: 'Computer Technology Major'  ## your title
+location: Gangwon-do, Korea
 
 
 ## Social Profiles
